--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,11 +28,11 @@ nav:
     - Reference documents:
       - Overview: user-guide/reference/overview.md
       - Routes: user-guide/reference/overview.md
-      - Controllers \& Actions: user-guide/reference/overview.md
+      - Controllers & Actions: user-guide/reference/overview.md
       - Abstract Controller: user-guide/reference/abstract-controller.md
       - Error Controller: user-guide/reference/overview.md
       - Modules: user-guide/reference/overview.md
-      - Views \& Layouts: user-guide/reference/overview.md
+      - Views & Layouts: user-guide/reference/overview.md
       - Models (database):
         - Workflow ((IMPORTANT)): user-guide/reference/overview.md
         - Business: user-guide/reference/overview.md
